test/scc/decl/semantic-errors/023.t
struct A
{
    struct A a;
};